...
          headerTitleAlign: 'center'
        }}
      />
      <Tabs.Screen
        name="(profile)"
        options={{
          title: t('Perfil'),
          tabBarIcon: ({ color, focused }) => (
            <TabBarIcon name={focused ? 'person' : 'person-outline'} color={color} />
          ),
          headerShown: false,
          headerTitle: t('Perfil'),
          headerTitleAlign: 'center'
...
